--- a/packages/liferay-theme-tasks/package.json
+++ b/packages/liferay-theme-tasks/package.json
@@ -9,6 +9,7 @@
 		"cross-spawn": "^2.2.3",
 		"del": "^1.1.1",
 		"diff": "^1.4.0",
+		"event-stream": "^4.0.0",
 		"fs-extra": "^0.24.0",
 		"globby": "^4.0.0",
 		"gogo-shell": "*",
@@ -34,6 +35,7 @@
 		"liferay-theme-deps-6.2": "^7.0.0",
 		"liferay-theme-deps-7.0": "^8.0.0-beta.5",
 		"liferay-theme-deps-7.1": "^8.0.0-beta.5",
+		"list-stream": "^1.0.0",
 		"lodash": "^3.10.0",
 		"minimist": "^1.1.0",
 		"node-bourbon": "4.2.3",
@@ -43,6 +45,7 @@
 		"portfinder": "^1.0.13",
 		"resolve": "^1.1.7",
 		"run-sequence": "^1.0.2",
+		"tar-fs": "^1.16.3",
 		"through2": "^2.0.0",
 		"update-notifier": "^1.0.0",
 		"vinyl-paths": "^1.0.0",
